# ArffFiles

./: .gitignore  ArffFiles.hpp  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeLists_conan.txt  CMakeUserPresets.json  Makefile  README.md  TECHNICAL_REPORT.md  conanfile.py
.claude/: settings.local.json
cmake/: ArffFilesConfig.cmake.in
config/: CMakeLists.txt  config.h.in
tests/: CMakeLists.txt  TestArffFiles.cc
tests/error_data/: duplicate_attributes.arff  empty_attribute_name.arff  empty_attribute_type.arff  empty_attributes.arff  empty_categorical.arff  empty_class_label.arff  invalid_numeric.arff  no_data.arff  quoted_question_mark.arff  wrong_token_count.arff
